# IF2RNA

./: .gitignore  IF2RNA_Progress_Slides.md  IF2RNA_Progress_Slides.pptx  README.md  REAL_IF_INTEGRATION_SUMMARY.txt  pyproject.toml  requirements.txt
analysis/: he2rna_performance_analysis.ipynb  he2rna_real_data_training.ipynb  he2rna_validation_test.ipynb  if_adaptation_test.ipynb  real_data_integration.ipynb  train_on_he2rna_data.ipynb
analysis/logs_validation/: events.out.tfevents.1762907083.dhcp-128-189-152-20.ubcsecure.wireless.ubc.ca
data/geomx_datasets/GSE289483/: filelist.html
docs/: HE2RNA_Analysis.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_SUMMARY.md  Project_Cleanup_Summary.md  Quick_Start_Real_Data.md  REAL_IF_DATA.md  ROSIE_Analysis_and_Relevance.md  ROSIE_BREAKTHROUGH.md  ROSIE_Integration_Guide.md  ROSIE_Integration_Roadmap.md  Real_Data_Acquisition_Guide.md  Real_Data_Integration_Summary.md  Step4A_Summary.md  Step4B_Summary.md
experiments/test_real_if/logs_fold_0/: events.out.tfevents.1768180120.Siddarths-Macbook-Air.local
models/: he2rna_training_results.npy  if2rna_he2rna_trained.pth
scripts/: download_geomx_curl.sh  download_geomx_data.sh  test_baseline.py  test_experiment.py  test_real_data.py  test_real_if_integration.py  test_real_training.py  test_realistic_tcga.py  test_rosie_loading.py  validate_environment.py  visualize_rosie_comparison.py
src/if2rna/: __init__.py  config.py  data.py  experiment.py  hybrid_dataset.py  model.py  real_geomx_parser.py  real_if_loader.py  rosie_model.py  simulated_if_generator.py
(+1 files in other folders)
