[project]
name = "if2rna"
version = "0.1.0"
description = "Predicting Spatial Gene Expression from Immunofluorescence Imaging using Deep Learning"
authors = [
    {name = "Bishneet Singh", email = "student@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.2.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "tensorboardX>=2.1",
    "tqdm>=4.50.0",
    "h5py>=3.1.0",
    "joblib>=1.0.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
